# jsmn-forge

./: .clang-format  .gitignore  .mypy.ini  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  radon.cfg  ruff.toml  tsconfig.json  vitest.config.ts
cmake/modules/: JsmnForge.cmake
codegen/src/jsmn_forge/: __init__.py  __main__.py  bundle.py  cli.py  codegen.py  diff.py
codegen/src/jsmn_forge/spec/: __init__.py  diff.py  json_schema.py  location.py  merge.py  node.py  normalize.py  openapi.py  openapi_3_1.py  schema.py  sort.py  walk.py
codegen/src/jsmn_forge/walk/: __init__.py  merge.py  normalize.py  walk.py
codegen/tests/: test_bundle.py  test_diff.py  test_location.py  test_spec.py  test_walk.py
codegen/tests/fixtures/: bool.yml  generic.yml  null.yml  object_optionals.h  object_optionals_prefix.h  variable_length_arrays.h  variable_length_arrays_optionals.yml
codegen/tests/integration/: test_flatten_openapi_3_1.py  test_spec_location.py
codegen/tests/unit/: test_bundle.py  test_lang_c.py  test_spec_location.py  test_spec_merge.py  test_spec_ref.py  test_spec_walk.py
docs/: conf.py  index.md
docs/_static/: custom.css
docs/_templates/: base.html
docs/ai/: index.md
docs/ai/audits/: audits.md
docs/ai/prompts/: prompts.md
e2e/: CMakeLists.txt  test_foo.c
parse/: package.json
parse/src/: cli.ts  descriptor.ts  discover.test.ts  discover.ts  flatten.ts  index.ts  log.ts  resolve.ts
parse/tests/: parse.test.ts
parse/tests/fixtures/: spec.valid.openapi.yaml
scripts/: postbuild.mjs
(+44 files in other folders)
