[project]
name = "jsmn-jam"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "basedpyright>=1.22.0",
    "clang-format>=21.1.8",
    "cmake-format[yaml]>=0.6.13",
    "meson>=1.10.0",
    "mypy>=1.13.0",
    "radon>=6.0.1",
    "ruff>=0.8.0",
]
